Bug 42948 - Recent HTML5 TreeBuilder Regression? All canvas tests ASSERT
Summary: Recent HTML5 TreeBuilder Regression? All canvas tests ASSERT
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebCore Misc. (show other bugs)
Version: 528+ (Nightly build)
Hardware: PC OS X 10.5
: P2 Normal
Assignee: Nobody
URL:
Keywords:
Depends on:
Blocks: 41123
  Show dependency treegraph
 
Reported: 2010-07-25 12:08 PDT by Eric Seidel (no email)
Modified: 2010-07-25 13:06 PDT (History)
2 users (show)

See Also:


Attachments
Patch (1.49 KB, patch)
2010-07-25 12:41 PDT, Adam Barth
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Eric Seidel (no email) 2010-07-25 12:08:09 PDT
Recent HTML5 TreeBuilder Regression?  All canvas tests ASSERT

ASSERTION FAILED: !child->attached()
(/Projects/WebKit/WebCore/html/HTMLConstructionSite.cpp:107 WTF::PassRefPtr<T> WebCore::HTMLConstructionSite::attach(WebCore::Node*, WTF::PassRefPtr<T>) [with ChildType = WebCore::Element])

Not sure when this started.
Comment 1 Adam Barth 2010-07-25 12:35:12 PDT
I can repro with run-webkit-tests but not with DumpRenderTree...
Comment 2 Adam Barth 2010-07-25 12:41:12 PDT
Created attachment 62528 [details]
Patch
Comment 3 Eric Seidel (no email) 2010-07-25 12:43:50 PDT
Comment on attachment 62528 [details]
Patch

Do we know why its only covered when running more than one test?
Comment 4 Adam Barth 2010-07-25 12:45:39 PDT
Nope.  That's pretty mysterious.  Maybe operator error?
Comment 5 WebKit Commit Bot 2010-07-25 13:06:07 PDT
Comment on attachment 62528 [details]
Patch

Clearing flags on attachment: 62528

Committed r64022: <http://trac.webkit.org/changeset/64022>
Comment 6 WebKit Commit Bot 2010-07-25 13:06:11 PDT
All reviewed patches have been landed.  Closing bug.